2007-09-18  Akim Demaille  <demaille@gostai.com>

	Disable var { a; b }
	* src/parser/bison/ugrammar.y: Do it.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Disable derives
	* src/parser/bison/ugrammar.y: Disable them, it is yet unclear
	what's valid on their lhs.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Get rid of "names"
	* src/parser/bison/ugrammar.y (names): Remove, use
	identifiers instead.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Braces are mandatory for functions
	Otherwise we have nasty issues: "function foo (a)" looks
	like "fn foo() { (a) }" and "function foo(a) { a }".  The
	parser does not like this.
	* src/parser/bison/ugrammar.y: Do that.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Simplify the grammar
	* src/parser/bison/ugrammar.y (class_declaration): There
	is no reason to accept composite names here.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Unary -
	* src/object/float-class.cc (float_class_sub): Support 1- and 2-ary.
	* src/parser/bison/ugrammar.y (copy): Now has a symbol value.
	(NEG): Rename as...
	(UNARY): this.
	Instead of creating a NegOp, pass the message "-()" to the target.
	Support "copy expr" as some dummy sugar for "expr.copy".
	* src/parser/bison/utoken.l: Adjust.
	* src/ast/ast.yml (NegOp): Remove.
	* src/runner/runner.hh, src/runner/runner.cc: Adjust.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	new_exp -> call
	* src/parser/bison/ugrammar.y (new_exp): Rename as...
	(call): this, it is more logical.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	s/\BExp//g
	* src/ast/ast.yml: Remove all the suffixes "Exp".
	* src/parser/bison/ugrammar.y, src/runner/runner.cc,
	* src/runner/runner.hh: Adjust.

	* src/ast/Makefile.am: Set the svn:ignore property automatically.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Fix function's scope handling
	"function () exp" is sugar for "function() { exp }".
	* src/parser/bison/ugrammar.y (scope): New.