@@ -1,5 +1,10 @@
 2007-09-18  Akim Demaille  <demaille@gostai.com>
 
+	Disable derives in the scanner
+	* src/parser/bison/utoken.l: Do it.
+
+2007-09-18  Akim Demaille  <demaille@gostai.com>
+
 	Disable var { a; b }
 	* src/parser/bison/ugrammar.y: Do it.
 
